# pdf-to-md

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
app/: __init__.py  jobs.py  main.py  routes.py  schemas.py
docs/: REVIEW-2026-07-09.md  REVIEW-LOCAL-2026-07-09.md
docs/superpowers/specs/: 2026-07-09-pdf-to-md-design.md
pdf_to_md/: __init__.py  __main__.py  cli.py  converter.py  deps.py  exceptions.py  extract.py  images.py  markdown.py  ocr.py
static/: 404.html  app.js  index.html  output.html  output.js  styles.css  theme.js
tests/: test_convert_digital.py  test_deps_poppler.py  test_images.py  test_markdown.py
