[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-to-md"
version = "0.1.0"
description = "Convert PDF documents to Markdown with hybrid digital extraction and OCR."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Praisel Ekpenyong" },
]
urls = { Homepage = "https://github.com/praisel-ekpenyong/pdf-to-md", Repository = "https://github.com/praisel-ekpenyong/pdf-to-md" }
dependencies = [
  "pdfplumber>=0.11.0",
  "pypdf>=4.0.0",
  "pytesseract>=0.3.10",
  "pdf2image>=1.17.0",
  "Pillow>=10.0.0",
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.27.0",
  "python-multipart>=0.0.9",
  "pydantic>=2.0.0",
]

[project.scripts]
pdf-to-md = "pdf_to_md.cli:main"

[tool.setuptools.packages.find]
include = ["pdf_to_md*", "app*"]
